[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/PressurePlate.gd" type="Script" id=1]
[ext_resource path="res://resources/graphics/traps/pressurePlate.png" type="Texture" id=2]
[ext_resource path="res://resources/sounds/trap_pressureplate_trigger.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[node name="PressurePlate" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TriggerPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SoundEffects"

[connection signal="body_entered" from="." to="." method="_on_PressurePlate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PressurePlate_body_exited"]
[connection signal="input_event" from="." to="." method="_on_PressurePlate_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PressurePlate_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PressurePlate_mouse_exited"]
